--- a/smart-admin-web/javascript-ant-design-vue3/package.json
+++ b/smart-admin-web/javascript-ant-design-vue3/package.json
@@ -41,6 +41,7 @@
     "v-viewer": "~1.6.4",
     "vue": "3.4.27",
     "vue-i18n": "9.13.1",
+    "vue-request": "^2.0.4",
     "vue-router": "4.3.2",
     "vue3-json-viewer": "2.2.2",
     "vue3-tabs-chrome": "^0.3.3"
